<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">S100_kuai</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_edit_account">邮箱/手机号码</string>
    <string name="login_edit_key">请输入密码</string>
    <string name="login_btn">登陆</string>
    <string name="login_registe">注册账号</string>
    <string name="login_forget">忘记密码</string>
</resources>
